[package]
name = "client"
version = "0.1.0"
authors = ["kaga <zhanghailin1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tokio-util ={ version = "0.2.0", features = ["full"] }

[[example]]
name = "pub_subject"
path = "examples/pub_subject.rs"
[[example]]
name = "sub_subject"
path = "examples/sub_subject.rs"
