[package]
name = "nats-server"
version = "0.1.0"
authors = ["kaga <zhanghailin1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tokio-util ={ version = "0.2.0", features = ["full"] }
rand="0.7"
bitflags="1.0"
futures = { version = "0.3.0", features = ["async-await"] }

[dev-dependencies]
#tokio-test = { version = "0.2.0", path="../../tokio-test" }
tokio-test = { version = "0.2.0"}
futures = { version = "0.3.0", features = ["async-await"] }